// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svelte/UIIcon > renders correctly - basic 1`] = `
<i
  class="ui-icon star large"
/>
`;

exports[`svelte/UIIcon > renders correctly - with id 1`] = `
<i
  class="ui-icon star "
  id="test"
/>
`;

exports[`svelte/UIIcon > renders correctly - with id 2`] = `
<i
  class="ui-icon star "
/>
`;
